fix: :bug: mobile adjusments, format and spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,11 @@
 
 html {
   font-size: 62.5%;
+  box-sizing: border-box;
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
 }
 
 body {
@@ -146,6 +151,7 @@ h1 span {
   padding: 1rem .5rem;
   border: 1px solid var(--grey-light);
   border-radius: 0.5rem;
+  width: 100%;
 }
 
 .background_section {
@@ -156,7 +162,22 @@ h1 span {
   background-position: center;
   background-repeat: no-repeat;
   background-image: url('../img/hero.jpg');
-  background-blend-mode: overlay;
+  position: relative;
+  padding: 5rem 0;
+}
+
+.background_section .overlay {
+  position: absolute;
+  background-color: rgba(0, 0, 0, .6);
+  width: 100%;
+  height: 100%;
+  top: 0;
+  z-index: 1;
+}
+
+.background_section section {
+  position: relative;
+  z-index: 2;
 }
 
 .card {
@@ -190,12 +211,17 @@ h1 span {
   border-color: var(--primary-dark);
 }
 
-@media (min-width: 480px) and (max-width: 767px) {
+@media (min-width: 320px) and (max-width: 767px) {
   .container {
     width: 100%;
+    padding: 0 1rem;
+  }
+  .card {
+    padding: 1.5em;
   }
   .nav_primary {
     flex-direction: column;
+    align-items: center;
   }
 }
 
